# image-matting

./: .gitignore  LICENSE  README.md
backend/: .gitignore  README.md  build.py  config.json  mac_dmg.py  mac_main.spec  main.py  main.spec  pyproject.toml  requirements.txt
backend/api/: __init__.py  ai_inpainting.py  ai_matting.py  compress_image_api.py  convert_image_api.py  server.py  user_api.py
backend/assets/: icon.icns  小宾AI抠图.webloc
backend/conf/: config.py  setting.py
backend/hub_model/: __init__.py  download.py  migan.py  rmbg_model.py
backend/utilities/: log.py  response.py  tinify_client.py  utils.py
backend/web/: index.html
backend/web/assets/: AIMattingHome-BEc2vIYF.js  AIMattingHome-BWIgq8Ez.js  AIMattingHome-BYTxmkWk.js  AIMattingHome-CqP78enU.js  AIMattingHome-DSIaSJA6.js  AIMattingHome-Daw1Yahc.js  AIPhotoEditor-0iIwSU1I.js  AIPhotoEditor-BowqQexr.js  AIPhotoEditor-kXXeBj2r.js  AIPhotoEditor-lJ1ihCKx.css  AIPhotoHome-D43da-ga.js  AIPhotoHome-DLtOvoh_.js  AIPhotoHome-ZaV07sFR.js  AIPhotoHome-evzXqZV8.js  AIPhotoHome-jUeiKT7n.js  AIPhotoResult-B4Gzx90G.js  AIPhotoResult-BD73iq_D.js  AIPhotoResult-BFEBgZ-p.css  AIPhotoResult-CNSvu3Hm.js  AIPhotoResult-F0tDoia-.js  AIPhotoResult-h5qLCyTy.css  AIPhotoResult-zew7LkFx.js  ConvertHome-D5KDB7D2.js  ConvertHome-DsT0sGA2.js  ConvertHome-lvYctEOL.js  ConvertImageEditor-BZpJe-ww.css  ConvertImageEditor-BdsdEm6x.js  ConvertImageEditor-CIpFVnP1.js  ConvertImageEditor-Dad7ZmAK.js  ImageCroperView-BmsvzW7g.js  ImageCroperView-D-Y4WzLh.js  ImageCroperView-D7o1hK5H.js  ImageCroperView-bxrDvQH8.css  (+61 more)
(+48 files in other folders)
